2012-06-18    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c, src/main.c, src/plugin.c: port to
	  Audacious 3.3-alpha1 plugin API (40)

2012-01-02    Michael Schwendt <mschwendt@users.sf.net>

	* configure.in: add pkg-config checks
	* src/main.c, src/plugin.c: requires glib-2.0.pc gtk+-3.0.pc CFLAGS
	* src/configure.c: require Audacious 3.2 beta1 API

2011-10-14    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c: port to Audacious 3.1 beta1 API
	* require at least Audacious 3.1

2011-07-06    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c: add widget config types

2011-06-15    Michael Schwendt <mschwendt@users.sf.net>

	* use Audacious GUI API instead of native GTK+
	* require at least Audacious 3.0-alpha1

2011-04-07    Michael Schwendt <mschwendt@users.sf.net>

	* src/about.c, src/configure.c: replace deprecated GTK+ stuff
	* src/main.c: successful end of play() should return TRUE

2011-02-02    Michael Schwendt <mschwendt@users.sf.net>

	* src/main.c, src/plugin.c: port to Audacious 2.5 alpha1 API

2010-07-23    Michael Schwendt <mschwendt@users.sf.net>

	* src/plugin.c: use probe_for_tuple instead of get_song_tuple,
	  replace deprecated play_file, drop deprecated seek
	* src/main.c: replace deprecated play_file with play,
	  improve stop/pause/mseek, add probe_for_tuple

2010-07-21    Michael Schwendt <mschwendt@users.sf.net>

	* src/main.c, src/configure.in: port to Audacious 2.4 beta1 API

2010-07-10    Michael Schwendt <mschwendt@users.sf.net>

	* configure.in: endian check is needed
	* src/main.c: make Audacious main window display "4 CHANNELS"
	  instead of an ambiguous bitrate

2010-06-20    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c: remove 11025 Hz, it's too low
	* src, src/Main.cpp: remove C++ files and decoder backend
	* src/main.c: copy from Main.cpp, turn into C, add conditional
	  support for Audacious 2.4, use libfc14audiodecoder API